--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-react": "^6.11.1",
+    "node-uuid": "^1.4.7",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-loader": "^2.4.0",
